tests/fixtures/invalid/str_bitxor_str.py
# Cannot bitwise XOR Str and Str
x: str = "hello" ^ "hello"
